Refactor/module state and screen lifecycle (#56)
* refactor: expose module domain operations

* cleanup

* refactor: config mutation in place

* fix: align screen and tracked-order state

Keep inventory ownership stable across child screens and dispatch closes once from the centralized screen transition. Refresh value-only order status changes without repeating notifications, and align configuration defaults.

* fix: guard preset container input